tests/compile_fail/variant_duplicate.dd
from cpp import variant
from serdde.macros import Serde


@derive(Serde)
class InvalidVariant:
    value: variant[i32, i32]


def main() -> i32:
    return 0
